k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fleet-app
  template:
    metadata:
      labels:
        app: fleet-app
    spec:
      containers:
      - name: fleet-app
        image: fleet-manager:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-app
spec:
  type: NodePort
  selector:
    app: fleet-app
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
