k8s/postgres_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-public
  namespace: quant-trading
  labels:
    team: database
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
    - 142.250.0.0/15
    - 172.217.0.0/16
    - 74.125.0.0/16
    - 0.0.0.0/32
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
